# sllurp

./: .gitignore  .pip-requirements.txt  .travis.yml  Dockerfile  Dockerfile.location  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  docker-build.sh  docker-compose-inventory.yml  docker-compose-location.yml  docker-compose.yml  install.sh  llrp.py  llrp_decoder.py  llrp_proto.py  plot.py  pyproject.toml  reset_reader.py  ro_access_report.py  ro_access_report2.py  rospec.py  run_inventory.sh  setup.py  simple_inventory.py  simpler.py  test.sh  test_location.sh  tox.ini  util.py
.circleci/: config.yml
clients/: Makefile
docker/: Dockerfile.direction  Dockerfile.inventory  Dockerfile.location  docker-build.sh  docker-compose-direction.yml  docker-compose-inventory.yml  docker-compose-location.yml  start_direction.sh  start_inventory.sh  start_location.sh
docs/: impinj-r1000-hybrid-mode-rospec.xml  index.md
examples/: caps.txt
location_analysis/: bowserJrZone.json  itemsense_location_plot.py  itemsense_zone_detect.py  itemsense_zone_detect_node_red.py  json_args.json  location_plot.py  node_red_itemsense_flow.json  plot_anomaly_comparison.py  requirements.txt  run1_data.json  run1_zone.json  run2_data.json  run2_zone.json  run3_data.json  run4_data.json  run5_data.json  run6_data.json  runx_data.json  test_tags.json
simulator/: Dockerfile  docker-compose.yml  tags.csv  tags.gob
sllurp/: __init__.py  __main__.py  access.py  cli.py  csv_recorder.py  decode.py  inventory.py  llrp.py  llrp_decoder.py  llrp_errors.py  llrp_proto.py  lock.py  log.py  reset.py  (+4 more)
(+56 files in other folders)
